--- a/language/english/help/help.html
+++ b/language/english/help/help.html
@@ -11,7 +11,7 @@
       The XoopsHeadlines module is used to display RSS feeds on your website. It is typically used to aggregate news feeds into a single location on your website. The headlines can be shown in the XoopsHeadlines module or in a block on your site.</p>
       <h4 class="odd">Install/Uninstall</h4>
     <p class="even">
-      No special measures necessary, follow the standard installation process, extract the "xoopsheadline" folder into the ../modules directory. Install the module through Admin -> System Module -> Modules. If you need detailed instructions on how to install a module, please see the <a href="http://goo.gl/adT2i">XOOPS Operations Manual</a>.<br /><br /></p>
+      No special measures necessary, follow the standard installation process, extract the "xoopsheadline" folder into the ../modules directory. Install the module through Admin -> System Module -> Modules. If you need detailed instructions on how to install a module, please see the <a href="https://www.gitbook.com/book/xoops/xoops-operations-guide/" target="_blank">XOOPS Operations Manual</a>.<br /><br /></p>
       <h4 class="odd">Tutorial</h4>
     <p class="even">
       You can find a more detailed Tutorial <a href="http://goo.gl/1Uiqj">here</a>
