--- a/blocks/headline_block.html
+++ b/blocks/headline_block.html
@@ -1,6 +1,6 @@
-<a href="<{$site_url}>" target="_blank"><{$site_name}></a><br />
+<a href="<{$site_url}>" target="_blank"><{$site_name}></a><br>
 <{if $image.url != ""}>
-  <img src="<{$image.url}>" style="width: <{$image.width|default:88}>; height: <{$image.height|default:31}>;" alt="<{$image.title}> /" /><br />
+  <img src="<{$image.url}>" style="width: <{$image.width|;default:88;}>; height: <{$image.height|;default:31;}>;" alt="<{$image.title}> /" /><br>
 <{/if}>
 
 <ul>
