--- a/language/english/help/help.html
+++ b/language/english/help/help.html
@@ -2,7 +2,7 @@
     <h1 class="head">Help:
         <a class="ui-corner-all tooltip" href="<{$xoops_url}>/modules/xoopsheadline/admin/index.php"
            title="Back to the administration of XoopsHeadline"> XoopsHeadline <img src="<{xoAdminIcons home.png}>"
-                                                                                   alt="Back to the Administration of XoopsHeadline"/>
+                                                                                   alt="Back to the Administration of XoopsHeadline">
         </a></h1>
     <!-- -----Help Content ---------- -->
 
